--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -1,4 +1,11 @@
 extends layouts/main
 
 block content
-    p edit profile!!
+    .form-container
+        form(action=routes.editProfile, method="post")
+            label(for="avatar") Avatar
+            input(type="file", name="avatar", placeholder="avatar")
+            input(type="text", name="Name", placeholder="Name")
+            input(type="email", name="email", placeholder="Email")
+            input(type="submit", value="Update Profile")
+        a.form-container__link(href=`/users${routes.changePassword}`) Change Password
