--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -2,10 +2,12 @@ extends layouts/main
 
 block content
     .form-container
-        form(action=routes.editProfile, method="post")
-            label(for="avatar") Avatar
-            input(type="file", name="avatar", placeholder="avatar")
-            input(type="text", name="Name", placeholder="Name")
-            input(type="email", name="email", placeholder="Email")
+        form(action=`/users${routes.editProfile}`, method="post")
+            .fileUpload
+                label(for="avatar") Avatar
+                input(type="file", id="avatar", name="avatar")
+            input(type="text", placeholder="Name", name="name")
+            input(type="email", placeholder="Email", name="email")
             input(type="submit", value="Update Profile")
-        a.form-container__link(href=`/users${routes.changePassword}`) Change Password
+        a.form-container__link(href=`/users${routes.changePassword}`)
+            button Change Password
